<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scan_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/qr_imageView"
        android:layout_width="500px"
        android:layout_height="500px"
        app:srcCompat="@drawable/ic_baseline_texture_100"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_textview"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/qr_code_scanner_animation"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="qr_code_scanner.json"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_imageView"
        />

    <TextView
        android:id="@+id/copy_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_qr"
        android:textColor="#808080"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_scanner_animation"/>

    <EditText
        android:id="@+id/qr_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_margin="4dp"
        android:hint="Enter text here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copy_textview"/>

    <ImageButton
        android:id="@+id/copy_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="6dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/copy"
        app:layout_constraintStart_toEndOf="@+id/qr_editText"
        app:layout_constraintTop_toBottomOf="@+id/copy_textview" />

    <Button
        android:id="@+id/qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_editText"/>

    <TextView
        android:id="@+id/your_id_description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_id_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_button"/>

    <TextView
        android:id="@+id/userid_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_id_description"
        android:textColor="#808080"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="textStart"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_id_description_textview"/>

    <TextView
        android:id="@+id/your_username_description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_username_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userid_textview"/>

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_username_description"
        android:textColor="#808080"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="textStart"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_username_description_textview"/>

</androidx.constraintlayout.widget.ConstraintLayout>